Initial Styling of Recipe Website --> DONE

--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baked Chicked Thighs</title>
-</head>
-<body>
-    <h1>Crispy and Tender Baked Chicken Thighs</h1>
-    <img width="500" height=500 src="images/chicken.jpeg"/>
-    <summary>This recipes serves <b>8 SERVINGS</b></summary>
-    <br>
-    <h2>Description</h2>
-    <p>Crispy chicken thighs are baked in the oven with a flavorful, homemade spice rub. The bone-in chicken thighs stay moist and juicy while the skin crisps up beautifully. Serve this budget-friendly main dish alongside any side dish for a dinner the whole family will love. </p>
-    <p>
-        This is the tastiest, easy-to-make, and most delicious chicken thigh recipe you will find out there.It's a great way to make a meal for your family and friends and it is also a great way to make a quick snack for yourself.
-    </p>
-    <hr>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Cooking Spray</li>
-        <li>8 bone-in, skin-on chicken thighs</li>
-        <li>¼ teaspoon garlic salt</li>
-        <li>¼ teaspoon onion salt</li>
-        <li>¼ teaspoon dried oregano</li>
-        <li>¼ teaspoon ground thyme</li>
-        <li>¼ teaspoon ground paprika</li>
-        <li>¼ teaspoon ground black pepper</li>
-    </ul>
-    <hr>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat the oven to 350 degrees F (175 degrees C). Line a baking sheet with aluminum foil; spray foil with cooking spray.</li>
-        <li>Arrange chicken thighs, skin-side up, on the prepared baking sheet.</li>
-        <li>Combine garlic salt, onion salt, oregano, thyme, paprika, and pepper in a small bowl; mix until well combined. Sprinkle spice mixture liberally over chicken thighs.</li>
-        <li>Bake chicken in the preheated oven until skin is crispy, thighs are no longer pink at the bone, and the juices run clear, about 1 hour. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</li>
-    </ol>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Baked Chicked Thighs</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>Baked Chicken Thighs</h1>
+        <div class="image">
+            <img width="500" height=500 src="images/chicken.jpeg" alt="" />
+            <summary>This recipes serves <u><b>8 SERVINGS</b></u></summary>
+        </div>
+        <br>
+        <h2>Description</h2>
+        <p>Crispy chicken thighs are baked in the oven with a flavorful,
+            homemade spice rub. The bone-in chicken thighs stay moist and juicy
+            while the skin crisps up beautifully. Serve this budget-friendly
+            main dish alongside any side dish for a dinner the whole family will
+            love. </p>
+        <p>
+            This is the tastiest, easy-to-make, and most delicious chicken thigh
+            recipe you will find out there.It's a great way to make a meal for
+            your family and friends and it is also a great way to make a quick
+            snack for yourself.
+        </p>
+
+        <hr>
+
+        <h2>Ingredients</h2>
+
+        <ul class="recipe-list">
+            <li>Cooking Spray</li>
+            <li>8 bone-in, skin-on chicken thighs</li>
+            <li>¼ teaspoon garlic salt</li>
+            <li>¼ teaspoon onion salt</li>
+            <li>¼ teaspoon dried oregano</li>
+            <li>¼ teaspoon ground thyme</li>
+            <li>¼ teaspoon ground paprika</li>
+            <li>¼ teaspoon ground black pepper</li>
+        </ul>
+
+        <hr>
+        <h2>Steps</h2>
+        <ol class="recipe-list">
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Line a
+                baking
+                sheet with aluminum foil; spray foil with cooking spray.</li>
+            <li>Arrange chicken thighs, skin-side up, on the prepared baking
+                sheet.</li>
+            <li>Combine garlic salt, onion salt, oregano, thyme, paprika,
+                and
+                pepper in a small bowl; mix until well combined. Sprinkle
+                spice
+                mixture liberally over chicken thighs.</li>
+            <li>Bake chicken in the preheated oven until skin is crispy,
+                thighs
+                are no longer pink at the bone, and the juices run clear,
+                about
+                1 hour. An instant-read thermometer inserted near the bone
+                should read 165 degrees F (74 degrees C).</li>
+        </ol>
+        <footer>Made With ❤️ By Youssef Waleed </footer>
+    </body>
 </html>
