--- a/recipes/one-bowl-cake.html
+++ b/recipes/one-bowl-cake.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Bowl Cake</title>
-</head>
-<body>
-    <h1>One Bowl Chocolate Cake</h1>
-    <img width="500" height=500 src="images/one-bowl-cake.jpeg"/>
-    <summary>This recipes consists <b>24 SERVINGS</b></summary>
-    <br>
-    <h2>Description</h2>
-    <p>This is a rich and moist one bowl chocolate cake. It only takes a few minutes to prepare the batter. Frost with your favorite chocolate frosting.Skip the store-bought mix and make this one-bowl chocolate cake from scratch. It's almost as easy as the boxed stuff, but it's so much more delicious and more beloved by many consumers !!! </p>
-    <hr>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 cups of white sugar</li>
-        <li>1 ¾ cups of all-purpose flour</li>
-        <li>¾ cup unsweetened cocoa powder </li>
-        <li>1 ½ teaspoons baking powder </li>
-        <li>1 ½ teaspoons baking soda </li>
-        <li>1 teaspoon salt </li>
-        <li>2 eggs </li>
-        <li>1 cup milk </li>
-        <li>½ cup vegetable oil </li>
-        <li>2 teaspoons vanilla extract </li>
-        <li>1 cup boiling water </li>
-    </ul>
-    <hr>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 350 degrees F (175 degrees C). Grease and flour two nine inch round pans.</li>
-        <li>In a large bowl, stir together the sugar, flour, cocoa, baking powder, baking soda and salt. Add the eggs, milk, oil and vanilla, mix for 2 minutes on medium speed of mixer. Stir in the boiling water last. Batter will be thin. Pour evenly into the prepared pans.</li>
-        <li>Bake 30 to 35 minutes in the preheated oven, until the cake tests done with a toothpick. Cool in the pans for 10 minutes, then remove to a wire rack to cool completely.</li>
-    </ol>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>One Bowl Cake</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h1>One Bowl Chocolate Cake</h1>
+
+        <div class="image">
+            <img width="500" height=500 src="images/one-bowl-cake.jpeg" alt=""
+                />
+            <summary>This recipes consists <u><b>24 SERVINGS</b></u></summary>
+        </div>
+
+        <br>
+        <h2>Description</h2>
+        <p>This is a rich and moist one bowl chocolate cake. It only takes a
+            few
+            minutes to prepare the batter. Frost with your favorite
+            chocolate
+            frosting.Skip the store-bought mix and make this one-bowl
+            chocolate
+            cake from scratch. It's almost as easy as the boxed stuff, but
+            it's
+            so much more delicious and more beloved by many consumers !!!
+        </p>
+        <hr>
+        <h2>Ingredients</h2>
+        <ul class="recipe-list">
+            <li>2 cups of white sugar</li>
+            <li>1 ¾ cups of all-purpose flour</li>
+            <li>¾ cup unsweetened cocoa powder </li>
+            <li>1 ½ teaspoons baking powder </li>
+            <li>1 ½ teaspoons baking soda </li>
+            <li>1 teaspoon salt </li>
+            <li>2 eggs </li>
+            <li>1 cup milk </li>
+            <li>½ cup vegetable oil </li>
+            <li>2 teaspoons vanilla extract </li>
+            <li>1 cup boiling water </li>
+        </ul>
+        <hr>
+        <h2>Steps</h2>
+        <ol class="recipe-list">
+            <li>Preheat oven to 350 degrees F (175 degrees C). Grease and
+                flour
+                two nine inch round pans.</li>
+            <li>In a large bowl, stir together the sugar, flour, cocoa,
+                baking
+                powder, baking soda and salt. Add the eggs, milk, oil and
+                vanilla, mix for 2 minutes on medium speed of mixer. Stir in
+                the
+                boiling water last. Batter will be thin. Pour evenly into
+                the
+                prepared pans.</li>
+            <li>Bake 30 to 35 minutes in the preheated oven, until the cake
+                tests done with a toothpick. Cool in the pans for 10
+                minutes,
+                then remove to a wire rack to cool completely.</li>
+        </ol>
+        <footer>Made With ❤️ By Youssef Waleed </footer>
+
+    </body>
 </html>
