Added icon for each web page

--- a/recipes/crispy-fried-fish.html
+++ b/recipes/crispy-fried-fish.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Crispy Fried Fish</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="images/icon.png" />
+
     </head>
     <body>
         <h1>Crispy Fried Fish</h1>
