--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Recipes</title>
+        <link rel="icon" href="recipes/images/icon.png" />
     </head>
     <body>
         <h1>Odin Recipes</h1>
